--- a/CarteAuxTresors/CarteAuxTresors.csproj
+++ b/CarteAuxTresors/CarteAuxTresors.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.IO.Abstractions" Version="7.1.3" />
+    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="7.1.3" />
+  </ItemGroup>
+
 </Project>
